Bug 170249 - FILESAVE: XLSX - Handle labels in formulas
Summary: FILESAVE: XLSX - Handle labels in formulas
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords:
Depends on:
Blocks: XLSX-Corrupted
  Show dependency treegraph
 
Reported: 2026-01-06 17:00 UTC by Karthik
Modified: 2026-02-09 10:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ODS File (10.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2026-01-06 17:02 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2026-01-06 17:00:53 UTC
Description:
Firstly go to "Tools" > "Options" > "LibreOffice Calc" > "Calculate", here enable
"Automatically find column and row labels" option

Open the ODP attachment, the cell B2 has the formula "=INDEX('Prices', 1, 3)". Here 'Prices' is a label of the 2nd row.

When we export the file to XLSX, these labels are exported in formulas without any change, as a result Excel throws an error when we open the exported XLSX

Lables in formulas are supported in XLS, but they are deprecated in XLSX

Steps to Reproduce:
1. Open the attached ODP file
2. Save it as XLSX
3. Open the resulting file in Excel

Actual Results:
Excel throws an error when opening the file

Expected Results:
Excel opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 1 Karthik 2026-01-06 17:02:48 UTC
Created attachment 204944 [details]
ODS File
Comment 2 Karthik 2026-01-06 17:03:36 UTC
Sorry, it's ODS file not ODP file.
Comment 3 Commit Notification 2026-02-04 18:14:22 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37ef2c37d867b10febb0c6deed820058db7b30c6

tdf#170249: XLSX - Handle labels in formulas

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-02-06 11:23:55 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/357006e865a1b0d8909b546f32315a9263c9eede

tdf#170249: XLSX - Handle labels in formulas

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.