tdf#170249: XLSX - Handle labels in formulas

Labels in XLSX export are not supported in Microsoft Excel, convert them
to actual references during XLSX export

Change-Id: I0ff72bdd5a267c3873907c86dfef295cef181487
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196650
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit a8831791e87d5e66885554157500e8eb6769d293)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197243
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 9f6507ab8e5a8ce0485f19a3964c0039f4cd1562)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198416
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198789